@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.6
 Date: ????
+
+  Changes:
+    - The "created X items at" chat message will now format quantities of items starting at 10000 (as in, "10k" instead of 10000).
+
   Bugfixes:
     - Fix main GUI that could be too tall and not wide enough in some cases.
     - Fix GUI losing its position on every save file load.
